--- a/Content/triangular_matrices_1.ipynb
+++ b/Content/triangular_matrices_1.ipynb
@@ -114,7 +114,7 @@
     "**Algorithm 3**\n",
     "\n",
     "    for i = 1:N\n",
-    "        y[i] = y[i] + dot(U[i,i:],x[i:])"
+    "        y[i] = dot(U[i,i:],x[i:])"
    ]
   },
   {
@@ -174,7 +174,7 @@
     "**Algorithm 8**\n",
     "\n",
     "    for i = 1:N\n",
-    "        z[i] = z[i] + dot(L[i,:i],x[:i])"
+    "        z[i] = dot(L[i,:i],x[:i])"
    ]
   },
   {
