--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -102,20 +102,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 19.712  89.383  57.459  73.792]\n",
-      " [ 91.905   9.162   8.359  71.278]\n",
-      " [ 27.108   5.278  22.732   8.701]\n",
-      " [ 28.94    6.452  25.362  55.512]] \n",
+      "[[  8.354  61.149  52.586  54.974]\n",
+      " [ 46.977   6.09   61.2    39.349]\n",
+      " [ 77.835   2.813  19.743  13.406]\n",
+      " [ 52.574  23.742   6.313  43.719]] \n",
       "\n",
-      "[[ 19.712  89.383  57.459  73.792]\n",
-      " [  0.      9.162   8.359  71.278]\n",
-      " [  0.      0.     22.732   8.701]\n",
-      " [  0.      0.      0.     55.512]] \n",
+      "[[  8.354  61.149  52.586  54.974]\n",
+      " [  0.      6.09   61.2    39.349]\n",
+      " [  0.      0.     19.743  13.406]\n",
+      " [  0.      0.      0.     43.719]] \n",
       "\n",
-      "[[ 19.712   0.      0.      0.   ]\n",
-      " [ 91.905   9.162   0.      0.   ]\n",
-      " [ 27.108   5.278  22.732   0.   ]\n",
-      " [ 28.94    6.452  25.362  55.512]]\n"
+      "[[  8.354   0.      0.      0.   ]\n",
+      " [ 46.977   6.09    0.      0.   ]\n",
+      " [ 77.835   2.813  19.743   0.   ]\n",
+      " [ 52.574  23.742   6.313  43.719]]\n"
      ]
     }
    ],
@@ -239,8 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 19.712  89.383   9.162  57.459   8.359  22.732  73.792  71.278   8.701\n",
-      "  55.512]\n"
+      "[  8.354  61.149   6.09   52.586  61.2    19.743  54.974  39.349  13.406\n",
+      "  43.719]\n"
      ]
     }
    ],
@@ -259,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 19.712  89.383  57.459  73.792]\n",
-      " [  0.      9.162   8.359  71.278]\n",
-      " [  0.      0.     22.732   8.701]\n",
-      " [  0.      0.      0.     55.512]]\n"
+      "[[  8.354  61.149  52.586  54.974]\n",
+      " [  0.      6.09   61.2    39.349]\n",
+      " [  0.      0.     19.743  13.406]\n",
+      " [  0.      0.      0.     43.719]]\n"
      ]
     }
    ],
@@ -380,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 19.712  89.383  57.459  73.792   9.162   8.359  71.278  22.732   8.701\n",
-      "  55.512]\n"
+      "[  8.354  61.149  52.586  54.974   6.09   61.2    39.349  19.743  13.406\n",
+      "  43.719]\n"
      ]
     }
    ],
@@ -400,10 +400,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 19.712  89.383  57.459  73.792]\n",
-      " [  0.      9.162   8.359  71.278]\n",
-      " [  0.      0.     22.732   8.701]\n",
-      " [  0.      0.      0.     55.512]]\n"
+      "[[  8.354  61.149  52.586  54.974]\n",
+      " [  0.      6.09   61.2    39.349]\n",
+      " [  0.      0.     19.743  13.406]\n",
+      " [  0.      0.      0.     43.719]]\n"
      ]
     }
    ],
@@ -525,8 +525,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 19.712  91.905  27.108  28.94    9.162   5.278   6.452  22.732  25.362\n",
-      "  55.512]\n"
+      "[  8.354  46.977  77.835  52.574   6.09    2.813  23.742  19.743   6.313\n",
+      "  43.719]\n"
      ]
     }
    ],
@@ -545,10 +545,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 19.712   0.      0.      0.   ]\n",
-      " [ 91.905   9.162   0.      0.   ]\n",
-      " [ 27.108   5.278  22.732   0.   ]\n",
-      " [ 28.94    6.452  25.362  55.512]]\n"
+      "[[  8.354   0.      0.      0.   ]\n",
+      " [ 46.977   6.09    0.      0.   ]\n",
+      " [ 77.835   2.813  19.743   0.   ]\n",
+      " [ 52.574  23.742   6.313  43.719]]\n"
      ]
     }
    ],
@@ -666,8 +666,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 19.712  91.905   9.162  27.108   5.278  22.732  28.94    6.452  25.362\n",
-      "  55.512]\n"
+      "[  8.354  46.977   6.09   77.835   2.813  19.743  52.574  23.742   6.313\n",
+      "  43.719]\n"
      ]
     }
    ],
@@ -686,10 +686,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 19.712   0.      0.      0.   ]\n",
-      " [ 91.905   9.162   0.      0.   ]\n",
-      " [ 27.108   5.278  22.732   0.   ]\n",
-      " [ 28.94    6.452  25.362  55.512]]\n"
+      "[[  8.354   0.      0.      0.   ]\n",
+      " [ 46.977   6.09    0.      0.   ]\n",
+      " [ 77.835   2.813  19.743   0.   ]\n",
+      " [ 52.574  23.742   6.313  43.719]]\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
     "**Algorithm 3**\n",
     "\n",
     "    for i = 1:N\n",
-    "        y[i] = y[i] + dot(U[i,i:],x[i:])"
+    "        y[i] = dot(U[i,i:],x[i:])"
    ]
   },
   {
@@ -725,7 +725,7 @@
     "    for i = 1:N\n",
     "        k1 = i - 1 + (i - 1)*(2*N - i)/2\n",
     "        k2 = N - 1 + (i - 1)*(2*N - i)/2\n",
-    "        y[i] = y[i] + dot(ur[k1:k2],x[i:])"
+    "        y[i] = dot(ur[k1:k2],x[i:])"
    ]
   },
   {
