--- a/Content/intro_linear_syst.ipynb
+++ b/Content/intro_linear_syst.ipynb
@@ -151,9 +151,7 @@
     "A = np.array([[1.,5.,-5.3],\n",
     "              [2.4,-2.,1.],\n",
     "              [7.8,-4.1,6.4]])\n",
-    "y = np.array([[42.],\n",
-    "              [11.],\n",
-    "              [67.]])"
+    "y = np.array([42., 11., 67.])"
    ]
   },
   {
@@ -185,65 +183,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.08129511]\n",
-      " [  9.23845874]\n",
-      " [  2.88180921]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Equivalently, `y` can be defined as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "y = np.array([42., 11., 67.])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Consequently, the vector `x` are given by:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "x = np.linalg.solve(A,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[ 11.08129511   9.23845874   2.88180921]\n"
      ]
     }
@@ -254,8 +193,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -269,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
