--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -102,20 +102,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  8.354  61.149  52.586  54.974]\n",
-      " [ 46.977   6.09   61.2    39.349]\n",
-      " [ 77.835   2.813  19.743  13.406]\n",
-      " [ 52.574  23.742   6.313  43.719]] \n",
+      "[[ 66.832  89.773  47.387  98.154]\n",
+      " [ 52.605  15.682  73.979  17.139]\n",
+      " [ 78.352  25.462  42.829  49.508]\n",
+      " [ 50.156  52.567  79.652   0.324]] \n",
       "\n",
-      "[[  8.354  61.149  52.586  54.974]\n",
-      " [  0.      6.09   61.2    39.349]\n",
-      " [  0.      0.     19.743  13.406]\n",
-      " [  0.      0.      0.     43.719]] \n",
+      "[[ 66.832  89.773  47.387  98.154]\n",
+      " [  0.     15.682  73.979  17.139]\n",
+      " [  0.      0.     42.829  49.508]\n",
+      " [  0.      0.      0.      0.324]] \n",
       "\n",
-      "[[  8.354   0.      0.      0.   ]\n",
-      " [ 46.977   6.09    0.      0.   ]\n",
-      " [ 77.835   2.813  19.743   0.   ]\n",
-      " [ 52.574  23.742   6.313  43.719]]\n"
+      "[[ 66.832   0.      0.      0.   ]\n",
+      " [ 52.605  15.682   0.      0.   ]\n",
+      " [ 78.352  25.462  42.829   0.   ]\n",
+      " [ 50.156  52.567  79.652   0.324]]\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1) column-based storage scheme for $\\mathbf{U}$**\n",
+    "**1) column-based storage scheme for $\\mathbf{U}$ (CBU)**\n",
     "\n",
     "This scheme stores the triangular matrix $\\mathbf{U}$, column by column, in a vector $\\mathbf{u}_{c}$ with $N(N+1)/2$ elements. Consider the example below:\n",
     "\n",
@@ -239,8 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  8.354  61.149   6.09   52.586  61.2    19.743  54.974  39.349  13.406\n",
-      "  43.719]\n"
+      "[ 66.832  89.773  15.682  47.387  73.979  42.829  98.154  17.139  49.508\n",
+      "   0.324]\n"
      ]
     }
    ],
@@ -259,10 +259,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  8.354  61.149  52.586  54.974]\n",
-      " [  0.      6.09   61.2    39.349]\n",
-      " [  0.      0.     19.743  13.406]\n",
-      " [  0.      0.      0.     43.719]]\n"
+      "[[ 66.832  89.773  47.387  98.154]\n",
+      " [  0.     15.682  73.979  17.139]\n",
+      " [  0.      0.     42.829  49.508]\n",
+      " [  0.      0.      0.      0.324]]\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2) row-based storage scheme for $\\mathbf{U}$**\n",
+    "**2) row-based storage scheme for $\\mathbf{U}$ (RBU)**\n",
     "\n",
     "This scheme stores the triangular matrix $\\mathbf{U}$, row by row, in a vector $\\mathbf{u}_{r}$ with $N(N+1)/2$ elements. Consider the example below:\n",
     "\n",
@@ -380,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  8.354  61.149  52.586  54.974   6.09   61.2    39.349  19.743  13.406\n",
-      "  43.719]\n"
+      "[ 66.832  89.773  47.387  98.154  15.682  73.979  17.139  42.829  49.508\n",
+      "   0.324]\n"
      ]
     }
    ],
@@ -400,10 +400,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  8.354  61.149  52.586  54.974]\n",
-      " [  0.      6.09   61.2    39.349]\n",
-      " [  0.      0.     19.743  13.406]\n",
-      " [  0.      0.      0.     43.719]]\n"
+      "[[ 66.832  89.773  47.387  98.154]\n",
+      " [  0.     15.682  73.979  17.139]\n",
+      " [  0.      0.     42.829  49.508]\n",
+      " [  0.      0.      0.      0.324]]\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3) column-based storage scheme for $\\mathbf{L}$**\n",
+    "**3) column-based storage scheme for $\\mathbf{L}$ (CBL)**\n",
     "\n",
     "This scheme stores the triangular matrix $\\mathbf{L}$, column by column, in a vector $\\mathbf{l}_{c}$ with $N(N+1)/2$ elements. Consider the example below:\n",
     "\n",
@@ -493,7 +493,7 @@
     "a vector lc by using a column scheme'\n",
     "    assert L.shape[0] == L.shape[1], 'L must be square'\n",
     "    # indices of the non-null elements\n",
-    "    i, j = np.tril_indices(U.shape[0])\n",
+    "    i, j = np.tril_indices(L.shape[0])\n",
     "    # reorganize the elements according to the column scheme\n",
     "    p = np.argsort(j)\n",
     "    i = i[p]\n",
@@ -525,8 +525,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  8.354  46.977  77.835  52.574   6.09    2.813  23.742  19.743   6.313\n",
-      "  43.719]\n"
+      "[ 66.832  52.605  78.352  50.156  15.682  25.462  52.567  42.829  79.652\n",
+      "   0.324]\n"
      ]
     }
    ],
@@ -545,10 +545,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  8.354   0.      0.      0.   ]\n",
-      " [ 46.977   6.09    0.      0.   ]\n",
-      " [ 77.835   2.813  19.743   0.   ]\n",
-      " [ 52.574  23.742   6.313  43.719]]\n"
+      "[[ 66.832   0.      0.      0.   ]\n",
+      " [ 52.605  15.682   0.      0.   ]\n",
+      " [ 78.352  25.462  42.829   0.   ]\n",
+      " [ 50.156  52.567  79.652   0.324]]\n"
      ]
     }
    ],
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4) row-based storage scheme for $\\mathbf{L}$**\n",
+    "**4) row-based storage scheme for $\\mathbf{L}$ (RBL)**\n",
     "\n",
     "This scheme stores the triangular matrix $\\mathbf{L}$, row by row, in a vector $\\mathbf{l}_{r}$ with $N(N+1)/2$ elements. Consider the example below:\n",
     "\n",
@@ -666,8 +666,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  8.354  46.977   6.09   77.835   2.813  19.743  52.574  23.742   6.313\n",
-      "  43.719]\n"
+      "[ 66.832  52.605  15.682  78.352  25.462  42.829  50.156  52.567  79.652\n",
+      "   0.324]\n"
      ]
     }
    ],
@@ -686,10 +686,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  8.354   0.      0.      0.   ]\n",
-      " [ 46.977   6.09    0.      0.   ]\n",
-      " [ 77.835   2.813  19.743   0.   ]\n",
-      " [ 52.574  23.742   6.313  43.719]]\n"
+      "[[ 66.832   0.      0.      0.   ]\n",
+      " [ 52.605  15.682   0.      0.   ]\n",
+      " [ 78.352  25.462  42.829   0.   ]\n",
+      " [ 50.156  52.567  79.652   0.324]]\n"
      ]
     }
    ],
@@ -708,7 +708,7 @@
    "source": [
     "These storage schemes can be used to modify the algorithms presented in the previous class ([`triangular_matrices_1.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/triangular_matrices_1.ipynb)) for computing the products $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ and $\\mathbf{z} = \\mathbf{L} \\mathbf{x}$. Consider the **Algorithm 3**, for example:\n",
     "\n",
-    "**Algorithm 3**\n",
+    "**Algorithm 3 (see the nootebook [`triangular_matrices_1.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/triangular_matrices_1.ipynb))**\n",
     "\n",
     "    for i = 1:N\n",
     "        y[i] = dot(U[i,i:],x[i:])"
@@ -718,9 +718,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that **Algorithm 3** accesses the elements of $\\mathbf{U}$, row by row. In this case, it is convenient to store $\\mathbf{U}$ in a vector $\\mathbf{u}_{r}$, according to the second storage scheme presented above. Finally, the **Algorithm 3** can be modified as follows:\n",
+    "Notice that **Algorithm 3** accesses the elements of $\\mathbf{U}$, row by row. In this case, it is convenient to store $\\mathbf{U}$ in a vector $\\mathbf{u}_{r}$, according to the second storage scheme presented above. Finally, the **Algorithm 3** can be modified by using the **RBU** storage scheme as follows:\n",
     "\n",
-    "**Algorithm 3 (modified)**\n",
+    "**Algorithm 3 (modified by using the RBU storage scheme)**\n",
     "\n",
     "    for i = 1:N\n",
     "        k1 = i - 1 + (i - 1)*(2*N - i)/2\n",
