--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -94,28 +94,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 66.832  89.773  47.387  98.154]\n",
-      " [ 52.605  15.682  73.979  17.139]\n",
-      " [ 78.352  25.462  42.829  49.508]\n",
-      " [ 50.156  52.567  79.652   0.324]] \n",
+      "[[ 11.575  61.18   78.163  37.39 ]\n",
+      " [ 67.159  10.337  98.158  23.42 ]\n",
+      " [ 94.337  39.987  64.092  58.599]\n",
+      " [ 62.864  36.009  36.084   6.048]] \n",
       "\n",
-      "[[ 66.832  89.773  47.387  98.154]\n",
-      " [  0.     15.682  73.979  17.139]\n",
-      " [  0.      0.     42.829  49.508]\n",
-      " [  0.      0.      0.      0.324]] \n",
+      "[[ 11.575  61.18   78.163  37.39 ]\n",
+      " [  0.     10.337  98.158  23.42 ]\n",
+      " [  0.      0.     64.092  58.599]\n",
+      " [  0.      0.      0.      6.048]] \n",
       "\n",
-      "[[ 66.832   0.      0.      0.   ]\n",
-      " [ 52.605  15.682   0.      0.   ]\n",
-      " [ 78.352  25.462  42.829   0.   ]\n",
-      " [ 50.156  52.567  79.652   0.324]]\n"
+      "[[ 11.575   0.      0.      0.   ]\n",
+      " [ 67.159  10.337   0.      0.   ]\n",
+      " [ 94.337  39.987  64.092   0.   ]\n",
+      " [ 62.864  36.009  36.084   6.048]]\n"
      ]
     }
    ],
@@ -159,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -231,16 +227,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 66.832  89.773  15.682  47.387  73.979  42.829  98.154  17.139  49.508\n",
-      "   0.324]\n"
+      "[ 11.575  61.18   10.337  78.163  98.158  64.092  37.39   23.42   58.599\n",
+      "   6.048]\n"
      ]
     }
    ],
@@ -251,18 +245,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 66.832  89.773  47.387  98.154]\n",
-      " [  0.     15.682  73.979  17.139]\n",
-      " [  0.      0.     42.829  49.508]\n",
-      " [  0.      0.      0.      0.324]]\n"
+      "[[ 11.575  61.18   78.163  37.39 ]\n",
+      " [  0.     10.337  98.158  23.42 ]\n",
+      " [  0.      0.     64.092  58.599]\n",
+      " [  0.      0.      0.      6.048]]\n"
      ]
     }
    ],
@@ -304,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -372,16 +362,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 66.832  89.773  47.387  98.154  15.682  73.979  17.139  42.829  49.508\n",
-      "   0.324]\n"
+      "[ 11.575  61.18   78.163  37.39   10.337  98.158  23.42   64.092  58.599\n",
+      "   6.048]\n"
      ]
     }
    ],
@@ -392,18 +380,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 66.832  89.773  47.387  98.154]\n",
-      " [  0.     15.682  73.979  17.139]\n",
-      " [  0.      0.     42.829  49.508]\n",
-      " [  0.      0.      0.      0.324]]\n"
+      "[[ 11.575  61.18   78.163  37.39 ]\n",
+      " [  0.     10.337  98.158  23.42 ]\n",
+      " [  0.      0.     64.092  58.599]\n",
+      " [  0.      0.      0.      6.048]]\n"
      ]
     }
    ],
@@ -445,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -517,16 +501,14 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 66.832  52.605  78.352  50.156  15.682  25.462  52.567  42.829  79.652\n",
-      "   0.324]\n"
+      "[ 11.575  67.159  94.337  62.864  10.337  39.987  36.009  64.092  36.084\n",
+      "   6.048]\n"
      ]
     }
    ],
@@ -537,18 +519,16 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 66.832   0.      0.      0.   ]\n",
-      " [ 52.605  15.682   0.      0.   ]\n",
-      " [ 78.352  25.462  42.829   0.   ]\n",
-      " [ 50.156  52.567  79.652   0.324]]\n"
+      "[[ 11.575   0.      0.      0.   ]\n",
+      " [ 67.159  10.337   0.      0.   ]\n",
+      " [ 94.337  39.987  64.092   0.   ]\n",
+      " [ 62.864  36.009  36.084   6.048]]\n"
      ]
     }
    ],
@@ -590,9 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -658,16 +636,14 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 66.832  52.605  15.682  78.352  25.462  42.829  50.156  52.567  79.652\n",
-      "   0.324]\n"
+      "[ 11.575  67.159  10.337  94.337  39.987  64.092  62.864  36.009  36.084\n",
+      "   6.048]\n"
      ]
     }
    ],
@@ -678,18 +654,16 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 66.832   0.      0.      0.   ]\n",
-      " [ 52.605  15.682   0.      0.   ]\n",
-      " [ 78.352  25.462  42.829   0.   ]\n",
-      " [ 50.156  52.567  79.652   0.324]]\n"
+      "[[ 11.575   0.      0.      0.   ]\n",
+      " [ 67.159  10.337   0.      0.   ]\n",
+      " [ 94.337  39.987  64.092   0.   ]\n",
+      " [ 62.864  36.009  36.084   6.048]]\n"
      ]
     }
    ],
@@ -769,7 +743,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -783,9 +757,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
