--- a/Content/special_linear_syst.ipynb
+++ b/Content/special_linear_syst.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, $\\mathbf{A}$ is an lower triangular matrix and the solution $\\mathbf{x}$ is given by:"
+    "In this case, $\\mathbf{A}$ is a lower triangular matrix and the solution $\\mathbf{x}$ is given by:"
    ]
   },
   {
@@ -124,34 +124,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 12"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Validate the algorithm for solving an upper triangular system according to the steps below:\n",
+    "1) In your `my_functions.py` file, create a function that solves the linear system `Ax = y`, where `A` is an UPPER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "1. Create a function that solves the linear system `Ax` for an upper triangular `A`. The function must receive the matrix `A` and the vector `x`.\n",
-    "3. Use the `code-template.ipynb` for comparing this function with the Python code shown at the end of this notebook."
+    "2) In your `test_my_functions.py` file, create two tests. In the first test, create an UPPER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function created in item 1. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by the function created in item 1 and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 13"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Validate the algorithm for solving a lower triangular system according to the steps below:\n",
+    "3) In your `my_functions.py` file, create a function that solves the linear system `Ax = y`, where `A` is an LOWER triangular matrix. The function must receive the matrix `A` and the vector `y` and return the computed vector `x`.\n",
     "\n",
-    "1. Create a function that solves the linear system `Ax` for a lower triangular `A`. The function must receive the matrix `A` and the vector `x`.\n",
-    "3. Use the `code-template.ipynb` for comparing this function with the Python code shown at the end of this notebook."
+    "4) In your `test_my_functions.py` file, create two tests. In the first test, create a LOWER triangular matrix `A0` and a vector `x0` and use them to compute a vector `A0x0 = y0`. Then, use `A0` and `y0` to compute a vector `x` with the function created in item 3. Finally, compare the computed vector `x` and the expected vector `x0`. In the second test, compare the result produced by the function created in item 3 and the result produced by the [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html) (see the example presented below), given the same input."
    ]
   },
   {
@@ -173,153 +171,161 @@
    },
    "outputs": [],
    "source": [
-    "N = 5\n",
-    "\n",
-    "B = np.reshape(np.arange(1., 26.), (N,N))\n",
-    "\n",
-    "y = np.linspace(11, 15, N)"
+    "N = 5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.   2.   3.   4.   5.]\n",
-      " [  6.   7.   8.   9.  10.]\n",
-      " [ 11.  12.  13.  14.  15.]\n",
-      " [ 16.  17.  18.  19.  20.]\n",
-      " [ 21.  22.  23.  24.  25.]]\n"
+      "[[ 3.24  5.16  1.06  0.57  1.35]\n",
+      " [ 0.01  5.87  0.11  4.96  0.56]\n",
+      " [ 9.75  7.57  0.58  0.95  4.34]\n",
+      " [ 0.15  3.27  6.49  1.05  4.11]\n",
+      " [ 9.03  2.29  2.46  6.55  6.69]]\n"
      ]
     }
    ],
    "source": [
-    "print B"
+    "A = 10*np.around(np.random.rand(N,N), decimals=3)\n",
+    "print A"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.  12.  13.  14.  15.]\n"
+      "[ 0.81   0.5    0.677  0.827  0.161]\n"
      ]
     }
    ],
    "source": [
+    "y = np.around(np.random.rand(N), decimals=3)\n",
     "print y"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.   0.   0.   0.   0.]\n",
-      " [  6.   7.   0.   0.   0.]\n",
-      " [ 11.  12.  13.   0.   0.]\n",
-      " [ 16.  17.  18.  19.   0.]\n",
-      " [ 21.  22.  23.  24.  25.]]\n"
+      "[[ 3.24  0.    0.    0.    0.  ]\n",
+      " [ 0.01  5.87  0.    0.    0.  ]\n",
+      " [ 9.75  7.57  0.58  0.    0.  ]\n",
+      " [ 0.15  3.27  6.49  1.05  0.  ]\n",
+      " [ 9.03  2.29  2.46  6.55  6.69]]\n"
      ]
     }
    ],
    "source": [
-    "L = np.tril(B)\n",
-    "\n",
+    "L = np.tril(A)\n",
     "print L"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.   2.   3.   4.   5.]\n",
-      " [  0.   7.   8.   9.  10.]\n",
-      " [  0.   0.  13.  14.  15.]\n",
-      " [  0.   0.   0.  19.  20.]\n",
-      " [  0.   0.   0.   0.  25.]]\n"
+      "[[ 3.24  5.16  1.06  0.57  1.35]\n",
+      " [ 0.    5.87  0.11  4.96  0.56]\n",
+      " [ 0.    0.    0.58  0.95  4.34]\n",
+      " [ 0.    0.    0.    1.05  4.11]\n",
+      " [ 0.    0.    0.    0.    6.69]]\n"
      ]
     }
    ],
    "source": [
-    "U = np.triu(B)\n",
-    "\n",
+    "U = np.triu(A)\n",
     "print U"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 11.        ,  -7.71428571,  -1.18681319,  -0.49971082,  -0.27983806])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.25         0.08475298  -4.14151736  26.08648134 -24.3600754 ]\n"
+     ]
     }
    ],
    "source": [
-    "np.linalg.solve(L,y)"
+    "print np.linalg.solve(L,y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 5.99652979,  0.49971082,  0.19433198,  0.10526316,  0.6       ])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.96330096 -0.50025329 -0.14860906  0.69341875  0.02406577]\n"
+     ]
     }
    ],
    "source": [
-    "np.linalg.solve(U,y)"
+    "print np.linalg.solve(U,y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the vertical seismic profiling problem where we wish to estimate vertical seismic slowness using travel time measurements of downward-propagating seismic waves, according to the Figure shown below. The orange star represent the source and the green triangles represent the receivers. The subsurface is discretized at $N$ depths $z_{i}$, $i =1, \\dots, N$, that are equally spaced at intervals of $\\Delta z$. The shallowest depth $z_{1}$ is equal to $\\Delta z_{0}$. At each depth $z_{i}$, there is an observed time $t_{i}$ (data). Let us also consider that each depth coincides with the limit between two layers having a constant slowness $s_{i}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='vsp_sketch.png', width=600>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -333,9 +339,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
