--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -188,15 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y = np.array([[5.23],\n",
-    "              [6.45],\n",
-    "              [1.67]])"
+    "y = np.array([5.23, 6.45, 1.67])"
    ]
   },
   {
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -219,18 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -247,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -259,15 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 1.  3.  2.]\n",
+      " [ 7.  4.  9.]\n",
+      " [ 8.  6.  5.]]\n",
+      "\n",
+      "\n",
       "[[ 7.  4.  9.]\n",
       " [ 1.  3.  2.]\n",
       " [ 8.  6.  5.]]\n"
@@ -275,27 +272,30 @@
     }
    ],
    "source": [
+    "print A\n",
+    "print '\\n'\n",
     "print T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6.45]\n",
-      " [ 5.23]\n",
-      " [ 1.67]]\n"
+      "[ 5.23  6.45  1.67]\n",
+      "\n",
+      "\n",
+      "[ 6.45  5.23  1.67]\n"
      ]
     }
    ],
    "source": [
+    "print y\n",
+    "print '\\n'\n",
     "print t"
    ]
   },
@@ -308,10 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -330,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -342,15 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 1.  3.  2.]\n",
+      " [ 7.  4.  9.]\n",
+      " [ 8.  6.  5.]]\n",
+      "\n",
+      "\n",
       "[[ 7.  4.  9.]\n",
       " [ 1.  3.  2.]\n",
       " [ 8.  6.  5.]]\n"
@@ -358,27 +359,30 @@
     }
    ],
    "source": [
+    "print A\n",
+    "print '\\n'\n",
     "print T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 6.45]\n",
-      " [ 5.23]\n",
-      " [ 1.67]]\n"
+      "[ 5.23  6.45  1.67]\n",
+      "\n",
+      "\n",
+      "[ 6.45  5.23  1.67]\n"
      ]
     }
    ],
    "source": [
+    "print y\n",
+    "print '\\n'\n",
     "print t"
    ]
   },
@@ -391,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -402,18 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -442,15 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 1.  3.  2.]\n",
+      " [ 7.  4.  9.]\n",
+      " [ 8.  6.  5.]]\n",
+      "\n",
+      "\n",
       "[[  1.   3.   2.]\n",
       " [ 21.  12.  27.]\n",
       " [  8.   6.   5.]]\n"
@@ -458,27 +461,30 @@
     }
    ],
    "source": [
+    "print A\n",
+    "print '\\n'\n",
     "print T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  5.23]\n",
-      " [ 19.35]\n",
-      " [  1.67]]\n"
+      "[ 5.23  6.45  1.67]\n",
+      "\n",
+      "\n",
+      "[  5.23  19.35   1.67]\n"
      ]
     }
    ],
    "source": [
+    "print y\n",
+    "print '\\n'\n",
     "print t"
    ]
   },
@@ -491,10 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,7 +508,7 @@
        "       [ 0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,10 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x2 = np.linalg.solve(T,t)"
@@ -533,18 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -561,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -575,15 +573,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 1.  3.  2.]\n",
+      " [ 7.  4.  9.]\n",
+      " [ 8.  6.  5.]]\n",
+      "\n",
+      "\n",
       "[[  1.   3.   2.]\n",
       " [  7.   4.   9.]\n",
       " [ 10.  12.   9.]]\n"
@@ -591,27 +592,30 @@
     }
    ],
    "source": [
+    "print A\n",
+    "print '\\n'\n",
     "print T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  5.23]\n",
-      " [  6.45]\n",
-      " [ 12.13]]\n"
+      "[ 5.23  6.45  1.67]\n",
+      "\n",
+      "\n",
+      "[  5.23   6.45  12.13]\n"
      ]
     }
    ],
    "source": [
+    "print y\n",
+    "print '\\n'\n",
     "print t"
    ]
   },
@@ -624,10 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -652,10 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x3 = np.linalg.solve(T,t)"
@@ -663,18 +663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -691,18 +687,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -712,18 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -733,18 +721,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -754,18 +738,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.70556701]\n",
-      " [ 1.34958763]\n",
-      " [ 1.44340206]]\n"
+      "[-1.70556701  1.34958763  1.44340206]\n"
      ]
     }
    ],
@@ -790,9 +770,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
