--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Special linear systems"
+    "## Triangular systems"
    ]
   },
   {
@@ -28,28 +28,6 @@
    "metadata": {},
    "source": [
     "where $\\mathbf{A}$ is a $N \\times N$ matrix and $\\mathbf{y}$ is a $N \\times 1$ vector."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Diagonal systems"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this case, $\\mathbf{A}$ is a diagonal matrix and the solution $\\mathbf{x}$ is given by:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    for i = 1:N\n",
-    "        x[i] = y[i]/A[i,i]"
    ]
   },
   {
@@ -303,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the vertical seismic profiling problem where we wish to estimate vertical seismic slowness using travel time measurements of downward-propagating seismic waves, according to the Figure shown below. The orange star represent the source and the green triangles represent the receivers. The subsurface is discretized at $N$ depths $z_{i}$, $i =1, \\dots, N$, that are equally spaced at intervals of $\\Delta z$. The shallowest depth $z_{1}$ is equal to $\\Delta z_{0}$. At each depth $z_{i}$, there is an observed time $t_{i}$ (data). Let us also consider that each depth coincides with the limit between two layers having a constant slowness $s_{i}$."
+    "Consider the vertical seismic profiling problem where we wish to estimate vertical seismic slowness using travel time measurements of downward-propagating seismic waves, according to the Figure shown below. The orange star represent the source and the green triangles represent the receivers. The subsurface is discretized at $N$ depths $z_{i}$, $i =1, \\dots, N$, that are equally spaced at intervals of $\\Delta z$. The shallowest depth $z_{1}$ is equal to $\\Delta z_{0}$. At each depth $z_{i}$, there is an observed time $t_{i}$ (data). Let us also consider that each depth $z_{i}$ coincides with the limit between two layers having a constant slowness $s_{i}$."
    ]
   },
   {
@@ -311,6 +289,48 @@
    "metadata": {},
    "source": [
     "<img src='vsp_sketch.png', width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Notice that, according to the Figure presented above, the linear system to be solved is given by:\n",
+    "\n",
+    "$$\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "\\Delta z_{0} & & & & & & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & & & & & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & \\Delta z & & & & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & \\Delta z & \\Delta z & & & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & \\Delta z & \\Delta z & \\Delta z & & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & \\Delta z & \\Delta z & \\Delta z & \\Delta z & \\\\\n",
+    "\\Delta z_{0} & \\Delta z & \\Delta z & \\Delta z & \\Delta z & \\Delta z & \\Delta z \\\\\n",
+    "\\end{bmatrix}}_{\\mathbf{M}}\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "s_{1} \\\\ s_{2} \\\\ s_{3} \\\\ s_{4} \\\\ s_{5} \\\\ s_{6} \\\\ s_{7}\n",
+    "\\end{bmatrix}}_{\\mathbf{s}} = \n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "t_{1} \\\\ t_{2} \\\\ t_{3} \\\\ t_{4} \\\\ t_{5} \\\\ t_{6} \\\\ t_{7}\n",
+    "\\end{bmatrix}}_{\\mathbf{t}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. In your `my_functions.py` file, create a function for solving the linear system $\\mathbf{M} \\mathbf{s} = \\mathbf{t}$. The function must receive $\\Delta z_{0}$, $\\Delta z$, and $\\mathbf{t}$ and return the slowness vector $\\mathbf{s}$. The function cannot create the matrix $\\mathbf{M}$ but use only the variables $\\Delta z_{0}$ and $\\Delta z$. To do it, modify one of the algorithms presented above for solving triangular systems.\n",
+    "2. In your `test_my_functions.py` file, create one test. In this test, create a slowness vector $\\mathbf{s}_{0}$ and the triangular matrix $\\mathbf{M}$. After that, compute a data vector $\\mathbf{t}_{0}$ by using $\\mathbf{M}$ and $\\mathbf{s}_{0}$. then, use $\\mathbf{M}$ and $\\mathbf{t}_{0}$ to estimate a slowness vector $\\mathbf{s}$ by using the function created in item 1. Finally, compare the estimated slowness vector $\\mathbf{s}$ and the true slowness vector $\\mathbf{s}_{0}$."
    ]
   },
   {
