--- a/Content/gauss-elim-intro.ipynb
+++ b/Content/gauss-elim-intro.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "How to solve this linear system? At this part of the course, we only know how to solve diagonal and triangular systems. It would be useful if this system were tranformed into an equivalent triangular system having the same solution $\\mathbf{x}$ as the unstructured system presented above. We say that this new system is equivalent because the solution is the same and triangular because its matrix is upper triangular.\n",
     "\n",
-    "[**Gaussian elimination**](https://en.wikipedia.org/wiki/Gaussian_elimination) is a numerical procedure applied for transforming a square and unstructured system into this equivalent triangular system, which can be represented as follows: "
+    "[**Gaussian elimination**](https://en.wikipedia.org/wiki/Gaussian_elimination) is a numerical procedure applied to transform a square and unstructured system into this equivalent triangular system, which can be represented as follows: "
    ]
   },
   {
@@ -152,8 +152,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This transformation is based on three row transformations that do not change the solution of the linear system: **swapping the positions of two rows**, **multiplying a row by a nonzero scalar** and **adding to one row a scalar multiple of another**. The cells below examplify these transformations."
+    "This transformation is based on three row transformations that do not change the solution of the linear system: **swapping the positions of two rows**, **multiplying a row by a nonzero scalar** and **adding to one row a scalar multiple of another**. All these transformations can be defined as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{T} \\mathbf{A} \\mathbf{x} = \\mathbf{T} \\mathbf{y} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{T}$ is a square matrix representing the desired transformation. Let's define the matrix $\\mathbf{T}$ for each transformation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1) swapping the positions of two rows **\n",
+    "\n",
+    "In this case, $\\mathbf{T}$ is defined by swapping two specific lines of the identity matrix. Let's consider, for example, a transformation that swaps the lines $1$ and $3$ of a $5 \\times 5$ matrix $\\mathbf{A}$. In this case, the matrix $\\mathbf{T}$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{T} =\n",
+    "\\begin{bmatrix}\n",
+    "0 & 0 & 1 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 & 0 \\\\\n",
+    "1 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 0 & 1\n",
+    "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -527,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x2 = np.linalg.solve(T,t)"
@@ -655,7 +701,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x3 = np.linalg.solve(T,t)"
