--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "source": [
     "1. In your `my_functions.py` file, create a function for solving the linear system $\\mathbf{M} \\mathbf{s} = \\mathbf{t}$. The function must receive $\\Delta z_{0}$, $\\Delta z$, and $\\mathbf{t}$ and return the slowness vector $\\mathbf{s}$. The function cannot create the matrix $\\mathbf{M}$ but use only the variables $\\Delta z_{0}$ and $\\Delta z$. To do it, modify one of the algorithms presented above for solving triangular systems.\n",
-    "2. In your `test_my_functions.py` file, create one test. In this test, create a slowness vector $\\mathbf{s}_{0}$ and the triangular matrix $\\mathbf{M}$. After that, compute a data vector $\\mathbf{t}_{0}$ by using $\\mathbf{M}$ and $\\mathbf{s}_{0}$. then, use $\\mathbf{M}$ and $\\mathbf{t}_{0}$ to estimate a slowness vector $\\mathbf{s}$ by using the function created in item 1. Finally, compare the estimated slowness vector $\\mathbf{s}$ and the true slowness vector $\\mathbf{s}_{0}$."
+    "2. In your `test_my_functions.py` file, create one test. In this test, create a slowness vector $\\mathbf{s}_{0}$ and the triangular matrix $\\mathbf{M}$. After that, compute a data vector $\\mathbf{t}_{0}$ by using $\\mathbf{M}$ and $\\mathbf{s}_{0}$. Then, use $\\mathbf{M}$ and $\\mathbf{t}_{0}$ to estimate a slowness vector $\\mathbf{s}$ by using the function created in item 1. Finally, compare the estimated slowness vector $\\mathbf{s}$ and the true slowness vector $\\mathbf{s}_{0}$."
    ]
   },
   {
