--- a/Content/gauss-elim-outer.ipynb
+++ b/Content/gauss-elim-outer.ipynb
@@ -53,9 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "y = np.array([[8.],\n",
-    "              [-11.],\n",
-    "              [-3.]])"
+    "y = np.array([8., -11., -3.])"
    ]
   },
   {
@@ -79,17 +77,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -181,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -202,17 +194,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.]\n",
-      " [ 1.]\n",
-      " [ 5.]]\n"
+      "[ 8.  1.  5.]\n"
      ]
     }
    ],
@@ -295,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -316,17 +302,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.]\n",
-      " [ 1.]\n",
-      " [ 1.]]\n"
+      "[ 8.  1.  1.]\n"
      ]
     }
    ],
@@ -362,22 +344,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n",
+      "[ 2.  3. -1.]\n",
       "\n",
       "\n",
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -513,9 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "u = np.array([[1.],\n",
-    "              [0.],\n",
-    "              [0.]])"
+    "u = np.array([1., 0., 0.])"
    ]
   },
   {
@@ -526,28 +500,22 @@
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [A[1][0]/A[0][0]],\n",
-    "              [A[2][0]/A[0][0]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A1 = (I - t*u.T).dot(A)"
+    "t = np.array([0., A[1][0]/A[0][0], A[2][0]/A[0][0]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = np.dot((I - np.outer(t,u)), A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -557,7 +525,7 @@
        "       [ 0. ,  2. ,  1. ]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,31 +536,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y1 = (I - t*u.T).dot(y)"
+    "y1 = np.dot((I - np.outer(t,u)), y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8.],\n",
-       "       [ 1.],\n",
-       "       [ 5.]])"
+       "array([ 8.,  1.,  5.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,47 +574,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "u = np.array([[0.],\n",
-    "              [1.],\n",
-    "              [0.]])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "t = np.array([[0.],\n",
-    "              [0.],\n",
-    "              [A1[2][1]/A1[1][1]]])"
+    "u = np.array([0., 1., 0.])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "B = (I - t*u.T).dot(A1)"
+    "t = np.array([0., 0., A1[2][1]/A1[1][1]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = np.dot((I - np.outer(t,u)), A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -660,7 +616,7 @@
        "       [ 0. ,  0. , -1. ]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,31 +627,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "z = (I - t*u.T).dot(y1)"
+    "z = np.dot((I - np.outer(t,u)), y1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8.],\n",
-       "       [ 1.],\n",
-       "       [ 1.]])"
+       "array([ 8.,  1.,  1.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,18 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
@@ -734,33 +682,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "Solution of the original system:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.]\n",
-      " [ 3.]\n",
-      " [-1.]]\n"
+      "[ 2.  3. -1.]\n"
      ]
     }
    ],
    "source": [
     "print np.linalg.solve(A,y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -779,9 +730,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
