--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -100,20 +100,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.575  61.18   78.163  37.39 ]\n",
-      " [ 67.159  10.337  98.158  23.42 ]\n",
-      " [ 94.337  39.987  64.092  58.599]\n",
-      " [ 62.864  36.009  36.084   6.048]] \n",
+      "[[ 70.113  74.017  20.457  56.895]\n",
+      " [ 48.189  48.958  73.841  47.424]\n",
+      " [  4.531  56.535  27.081  71.793]\n",
+      " [ 10.089  73.144  95.115  52.392]] \n",
       "\n",
-      "[[ 11.575  61.18   78.163  37.39 ]\n",
-      " [  0.     10.337  98.158  23.42 ]\n",
-      " [  0.      0.     64.092  58.599]\n",
-      " [  0.      0.      0.      6.048]] \n",
+      "[[ 70.113  74.017  20.457  56.895]\n",
+      " [  0.     48.958  73.841  47.424]\n",
+      " [  0.      0.     27.081  71.793]\n",
+      " [  0.      0.      0.     52.392]] \n",
       "\n",
-      "[[ 11.575   0.      0.      0.   ]\n",
-      " [ 67.159  10.337   0.      0.   ]\n",
-      " [ 94.337  39.987  64.092   0.   ]\n",
-      " [ 62.864  36.009  36.084   6.048]]\n"
+      "[[ 70.113   0.      0.      0.   ]\n",
+      " [ 48.189  48.958   0.      0.   ]\n",
+      " [  4.531  56.535  27.081   0.   ]\n",
+      " [ 10.089  73.144  95.115  52.392]]\n"
      ]
     }
    ],
@@ -233,8 +233,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.575  61.18   10.337  78.163  98.158  64.092  37.39   23.42   58.599\n",
-      "   6.048]\n"
+      "[ 70.113  74.017  48.958  20.457  73.841  27.081  56.895  47.424  71.793\n",
+      "  52.392]\n"
      ]
     }
    ],
@@ -251,10 +251,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.575  61.18   78.163  37.39 ]\n",
-      " [  0.     10.337  98.158  23.42 ]\n",
-      " [  0.      0.     64.092  58.599]\n",
-      " [  0.      0.      0.      6.048]]\n"
+      "[[ 70.113  74.017  20.457  56.895]\n",
+      " [  0.     48.958  73.841  47.424]\n",
+      " [  0.      0.     27.081  71.793]\n",
+      " [  0.      0.      0.     52.392]]\n"
      ]
     }
    ],
@@ -323,6 +323,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ij = 00 | k = 0\n",
+      "ij = 01 | k = 1\n",
+      "ij = 02 | k = 2\n",
+      "ij = 03 | k = 3\n",
+      "ij = 11 | k = 4\n",
+      "ij = 12 | k = 5\n",
+      "ij = 13 | k = 6\n",
+      "ij = 22 | k = 7\n",
+      "ij = 23 | k = 8\n",
+      "ij = 33 | k = 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(N):\n",
+    "    for j in range(i, N):\n",
+    "        #k = j - 1 + (i - 1)*(2*N - i)/2\n",
+    "        k = j + i*(2*N - i - 1)/2\n",
+    "        print 'ij = %d%d | k = %d' % (i, j, k)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,8 +398,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.575  61.18   78.163  37.39   10.337  98.158  23.42   64.092  58.599\n",
-      "   6.048]\n"
+      "[ 70.113  74.017  20.457  56.895  48.958  73.841  47.424  27.081  71.793\n",
+      "  52.392]\n"
      ]
     }
    ],
@@ -386,10 +416,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.575  61.18   78.163  37.39 ]\n",
-      " [  0.     10.337  98.158  23.42 ]\n",
-      " [  0.      0.     64.092  58.599]\n",
-      " [  0.      0.      0.      6.048]]\n"
+      "[[ 70.113  74.017  20.457  56.895]\n",
+      " [  0.     48.958  73.841  47.424]\n",
+      " [  0.      0.     27.081  71.793]\n",
+      " [  0.      0.      0.     52.392]]\n"
      ]
     }
    ],
@@ -507,8 +537,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.575  67.159  94.337  62.864  10.337  39.987  36.009  64.092  36.084\n",
-      "   6.048]\n"
+      "[ 70.113  48.189   4.531  10.089  48.958  56.535  73.144  27.081  95.115\n",
+      "  52.392]\n"
      ]
     }
    ],
@@ -525,10 +555,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.575   0.      0.      0.   ]\n",
-      " [ 67.159  10.337   0.      0.   ]\n",
-      " [ 94.337  39.987  64.092   0.   ]\n",
-      " [ 62.864  36.009  36.084   6.048]]\n"
+      "[[ 70.113   0.      0.      0.   ]\n",
+      " [ 48.189  48.958   0.      0.   ]\n",
+      " [  4.531  56.535  27.081   0.   ]\n",
+      " [ 10.089  73.144  95.115  52.392]]\n"
      ]
     }
    ],
@@ -642,8 +672,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 11.575  67.159  10.337  94.337  39.987  64.092  62.864  36.009  36.084\n",
-      "   6.048]\n"
+      "[ 70.113  48.189  48.958   4.531  56.535  27.081  10.089  73.144  95.115\n",
+      "  52.392]\n"
      ]
     }
    ],
@@ -660,10 +690,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 11.575   0.      0.      0.   ]\n",
-      " [ 67.159  10.337   0.      0.   ]\n",
-      " [ 94.337  39.987  64.092   0.   ]\n",
-      " [ 62.864  36.009  36.084   6.048]]\n"
+      "[[ 70.113   0.      0.      0.   ]\n",
+      " [ 48.189  48.958   0.      0.   ]\n",
+      " [  4.531  56.535  27.081   0.   ]\n",
+      " [ 10.089  73.144  95.115  52.392]]\n"
      ]
     }
    ],
@@ -729,15 +759,6 @@
     "\n",
     "* [Intel developer zone - Matrix Storage Schemes for LAPACK Routines](https://software.intel.com/en-us/mkl-developer-reference-c-matrix-storage-schemes-for-lapack-routines)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
