--- a/Content/triangular_systems.ipynb
+++ b/Content/triangular_systems.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "    for i = 1:N\n",
     "        x[i] = y[i]\n",
-    "        for j = 1:i-1\n",
+    "        for j = 1:i\n",
     "            x[i] = x[i] - A[i,j]*x[j]\n",
     "        x[i] = x[i]/A[i,i]"
    ]
@@ -94,7 +94,7 @@
    "metadata": {},
    "source": [
     "    for i = 1:N\n",
-    "        x[i] = y[i] - dot(A[i,:i-1],x[:i-1])\n",
+    "        x[i] = y[i] - dot(A[i,:i],x[:i])\n",
     "        x[i] = x[i]/A[i,i]"
    ]
   },
